--- a/css/app.css
+++ b/css/app.css
@@ -48,8 +48,12 @@ h5,
 h6,
 .title {
   font-family: "AppTitle", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 500;
+  font-weight: normal;
   /* color: var(--primary); */
+}
+
+b {
+  font-weight: bold;
 }
 
 .app-icon {
@@ -60,6 +64,7 @@ h6,
 
 .app-logo {
   width: 10rem;
+  max-width: 100%;
   object-fit: contain;
 }
 
@@ -152,7 +157,7 @@ h6,
   flex-direction: column;
 }
 .icon-container .icon {
-  font-size: 120%;
+  font-size: 150%;
   margin: 0.5rem !important;
 }
 
@@ -160,7 +165,7 @@ h6,
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
+  /* margin: auto; */
 }
 [class*=sq-]:not(.h) {
   flex-direction: column;
@@ -168,6 +173,11 @@ h6,
 [class*=sq-] img {
   object-fit: contain;
   width: 100%;
+}
+
+hr {
+  border-top-color: currentColor;
+  opacity: 0.5;
 }
 
 hr[class*=s-] {
@@ -236,7 +246,7 @@ hr[class*=s-] {
 }
 .input:not(.has-addon),
 *:not(.input) > input:not(.has-addon) {
-  align-self: stretch;
+  /* align-self: stretch; */
   padding: 0.5rem 1.5rem;
 }
 .input.has-error,
@@ -261,7 +271,7 @@ textarea::-moz-input-placeholder,
 textarea:-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   display: none;
-  color: var(--primary);
+  color: currentColor;
   opacity: 0.75;
 }
 
@@ -577,7 +587,44 @@ option[disabled]:first-of-type {
   /* margin-bottom: 0; */
 }
 
+.progress.dotted {
+  display: flex;
+  min-width: 25%;
+  list-style: none;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  /* border-radius: 5rem; */
+}
+.progress.dotted::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.125;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  background-color: currentColor;
+}
+.progress.dotted .dot {
+  background-color: currentColor;
+  border-radius: 50%;
+  width: 0.5rem;
+  height: 0.5rem;
+  z-index: 1;
+  position: relative;
+}
+.progress.dotted .dot + .dot {
+  margin-left: 0.5rem;
+}
+.progress.dotted .dot.active ~ .dot {
+  opacity: 0.5;
+}
+
 .tabs {
+  position: relative;
   margin-bottom: 1rem;
   display: flex;
   overflow-x: scroll;
@@ -594,6 +641,7 @@ option[disabled]:first-of-type {
   text-transform: capitalize;
   padding: 0.25rem;
   color: currentColor;
+  border: none;
   border-radius: 5px;
   font-weight: bold;
   min-width: 5rem;
@@ -615,7 +663,52 @@ option[disabled]:first-of-type {
   align-self: stretch;
   object-fit: contain;
 }
+.tabs.overlap {
+  scrollbar-width: 0;
+  margin-bottom: 0;
+}
+.tabs.overlap::-webkit-scrollbar {
+  width: 0;
+}
+.tabs.overlap::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 1px;
+  background-color: inherit;
+  width: 100%;
+}
+.tabs.overlap > .tab {
+  margin-bottom: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  padding: 0.25rem 0.5rem;
+}
+.tabs.overlap > .tab .label {
+  margin: 0.5rem;
+}
 
+.tabs-container .tabs .tab {
+  position: relative;
+}
+.tabs-container .tabs .tab::before, .tabs-container .tabs .tab::after {
+  content: "";
+  position: absolute;
+  height: 5%;
+  width: 5%;
+  bottom: -1px;
+}
+.tabs-container .tabs .tab::before {
+  left: 0;
+  transform: translateX(-100%);
+  border-top-left-radius: 5%;
+}
+.tabs-container .tabs .tab::after {
+  right: 0;
+  transform: translateX(100%);
+  border-top-left-radius: 5%;
+}
 .border-dashed {
   border-style: dashed !important;
 }
@@ -653,15 +746,12 @@ option[disabled]:first-of-type {
   font-size: 120%;
   /* font-weight: bold; */
   min-width: 7.5rem;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
 }
 .btn:focus {
   outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50%));
-}
-.btn:not(.no-rounded) {
-  border-radius: 0.5rem;
 }
 .btn.btn-block {
   width: 100%;
@@ -711,6 +801,7 @@ option[disabled]:first-of-type {
   border-radius: inherit;
   align-self: stretch;
   margin: 0;
+  min-width: unset;
   flex: 1 1 100%;
 }
 
@@ -718,7 +809,8 @@ option[disabled]:first-of-type {
   border-radius: inherit;
 }
 
-.tabular {
+.tabular,
+.table-container {
   color: var(--black);
   border-collapse: separate;
   border-spacing: 0;
@@ -726,19 +818,22 @@ option[disabled]:first-of-type {
   /* font-size: 90%; */
 }
 .tabular,
-.tabular table {
+.tabular table,
+.table-container,
+.table-container table {
   width: 100%;
 }
-.tabular.is-table-sticky {
+.tabular.is-table-sticky,
+.table-container.is-table-sticky {
   display: flex;
 }
-.tabular.is-sticky {
+.tabular.is-sticky,
+.table-container.is-sticky {
   overflow-x: scroll;
   padding: 0 0 1rem;
 }
-.tabular.is-sticky .sticky {
-  position: sticky;
-  position: -webkit-sticky;
+.tabular.is-sticky .sticky,
+.table-container.is-sticky .sticky {
   /* &::after {
     content: '';
     display: block;
@@ -751,19 +846,29 @@ option[disabled]:first-of-type {
     border-right: thin solid var(--border-color)
   } */
 }
-.tabular.is-sticky .row {
+.tabular.is-sticky .row,
+.table-container.is-sticky .row {
   flex-wrap: nowrap;
 }
-.tabular.is-sticky thead th {
+.tabular.is-sticky thead th,
+.table-container.is-sticky thead th {
   min-width: 15vw;
 }
 .tabular thead,
-.tabular .tabular-header {
+.tabular .table-header,
+.tabular .tabular-header,
+.table-container thead,
+.table-container .table-header,
+.table-container .tabular-header {
   color: var(--secondary, hsl(var(--secondary-hs), calc(var(--secondary-l) + 10%)));
   font-weight: bold;
 }
 .tabular thead.sticky-header th,
-.tabular .tabular-header.sticky-header th {
+.tabular .table-header.sticky-header th,
+.tabular .tabular-header.sticky-header th,
+.table-container thead.sticky-header th,
+.table-container .table-header.sticky-header th,
+.table-container .tabular-header.sticky-header th {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -771,25 +876,39 @@ option[disabled]:first-of-type {
   z-index: 2;
 }
 .tabular thead.sticky-header th.sticky,
-.tabular .tabular-header.sticky-header th.sticky {
+.tabular .table-header.sticky-header th.sticky,
+.tabular .tabular-header.sticky-header th.sticky,
+.table-container thead.sticky-header th.sticky,
+.table-container .table-header.sticky-header th.sticky,
+.table-container .tabular-header.sticky-header th.sticky {
   z-index: 3;
 }
 .tabular tr,
 .tabular > .row,
-.tabular .scrollable > .row {
+.tabular .scrollable > .row,
+.table-container tr,
+.table-container > .row,
+.table-container .scrollable > .row {
   position: relative;
   border-radius: 0.5rem;
   margin: 0 0 0.25rem;
+  width: 100%;
   background-color: var(--white);
 }
 .tabular tr:nth-child(even):not(.tabular-header),
 .tabular > .row:nth-child(even):not(.tabular-header),
-.tabular .scrollable > .row:nth-child(even):not(.tabular-header) {
+.tabular .scrollable > .row:nth-child(even):not(.tabular-header),
+.table-container tr:nth-child(even):not(.tabular-header),
+.table-container > .row:nth-child(even):not(.tabular-header),
+.table-container .scrollable > .row:nth-child(even):not(.tabular-header) {
   background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 40%));
 }
 .tabular tr [class*=col],
 .tabular > .row [class*=col],
-.tabular .scrollable > .row [class*=col] {
+.tabular .scrollable > .row [class*=col],
+.table-container tr [class*=col],
+.table-container > .row [class*=col],
+.table-container .scrollable > .row [class*=col] {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -803,7 +922,16 @@ option[disabled]:first-of-type {
 .tabular > .row [class*=col],
 .tabular .scrollable > .row td,
 .tabular .scrollable > .row th,
-.tabular .scrollable > .row [class*=col] {
+.tabular .scrollable > .row [class*=col],
+.table-container tr td,
+.table-container tr th,
+.table-container tr [class*=col],
+.table-container > .row td,
+.table-container > .row th,
+.table-container > .row [class*=col],
+.table-container .scrollable > .row td,
+.table-container .scrollable > .row th,
+.table-container .scrollable > .row [class*=col] {
   margin-bottom: 0;
   padding: 1rem;
   background-color: inherit;
@@ -816,7 +944,16 @@ option[disabled]:first-of-type {
 .tabular > .row [class*=col].sticky,
 .tabular .scrollable > .row td.sticky,
 .tabular .scrollable > .row th.sticky,
-.tabular .scrollable > .row [class*=col].sticky {
+.tabular .scrollable > .row [class*=col].sticky,
+.table-container tr td.sticky,
+.table-container tr th.sticky,
+.table-container tr [class*=col].sticky,
+.table-container > .row td.sticky,
+.table-container > .row th.sticky,
+.table-container > .row [class*=col].sticky,
+.table-container .scrollable > .row td.sticky,
+.table-container .scrollable > .row th.sticky,
+.table-container .scrollable > .row [class*=col].sticky {
   left: 0;
   right: 0;
   z-index: 1;
@@ -840,7 +977,16 @@ option[disabled]:first-of-type {
 .tabular > .row [class*=col].text-truncate,
 .tabular .scrollable > .row td.text-truncate,
 .tabular .scrollable > .row th.text-truncate,
-.tabular .scrollable > .row [class*=col].text-truncate {
+.tabular .scrollable > .row [class*=col].text-truncate,
+.table-container tr td.text-truncate,
+.table-container tr th.text-truncate,
+.table-container tr [class*=col].text-truncate,
+.table-container > .row td.text-truncate,
+.table-container > .row th.text-truncate,
+.table-container > .row [class*=col].text-truncate,
+.table-container .scrollable > .row td.text-truncate,
+.table-container .scrollable > .row th.text-truncate,
+.table-container .scrollable > .row [class*=col].text-truncate {
   max-width: 15vw;
 }
 .tabular tr td p,
@@ -851,12 +997,24 @@ option[disabled]:first-of-type {
 .tabular > .row [class*=col] p,
 .tabular .scrollable > .row td p,
 .tabular .scrollable > .row th p,
-.tabular .scrollable > .row [class*=col] p {
+.tabular .scrollable > .row [class*=col] p,
+.table-container tr td p,
+.table-container tr th p,
+.table-container tr [class*=col] p,
+.table-container > .row td p,
+.table-container > .row th p,
+.table-container > .row [class*=col] p,
+.table-container .scrollable > .row td p,
+.table-container .scrollable > .row th p,
+.table-container .scrollable > .row [class*=col] p {
   margin-bottom: 0;
 }
 .tabular tr .tabular-badge,
 .tabular > .row .tabular-badge,
-.tabular .scrollable > .row .tabular-badge {
+.tabular .scrollable > .row .tabular-badge,
+.table-container tr .tabular-badge,
+.table-container > .row .tabular-badge,
+.table-container .scrollable > .row .tabular-badge {
   position: absolute;
   top: 0;
   right: 1rem;
@@ -897,79 +1055,6 @@ option[disabled]:first-of-type {
 }
 
 /* Scrollable Container - End */
-/* Carousel - Start */
-/* .carousel.fullwidth .carousel-item {
-  width: 100%;
-}
-
-.owl-carousel.fullwidth .owl-stage {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.carousel .carousel-item {
-  margin-right: 1rem;
-  width: 90%;
-} */
-.owl-carousel.partical {
-  margin-left: -1.25rem;
-  margin-right: -1.25rem;
-}
-
-.owl-carousel.partical .owl-stage-outer {
-  min-width: 100vw;
-}
-
-.owl-carousel .owl-stage {
-  /* padding-left: 0 !important; */
-  display: flex;
-}
-.owl-carousel .owl-item {
-  padding-left: 0.25rem;
-}
-.owl-carousel .owl-item .flex-card {
-  border-radius: 0.75rem;
-  height: 100%;
-  border: none;
-}
-.owl-carousel .owl-item .flex-card .bg-image {
-  object-fit: cover;
-  position: absolute;
-  display: block;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
-.owl-carousel .owl-item .flex-card .content {
-  align-self: stretch;
-}
-.owl-carousel .owl-item .flex-card .content .title {
-  margin-bottom: 0.5rem;
-}
-.owl-carousel .owl-dots {
-  display: flex;
-  flex-wrap: nowrap;
-  text-align: center;
-}
-.owl-carousel .owl-dots .owl-dot {
-  height: 0.125rem;
-  width: 100%;
-  /* width: 2.5rem; */
-  margin-right: 0.25rem;
-  background-color: currentColor;
-  opacity: 0.125;
-  transition: all 0.75s;
-}
-.owl-carousel .owl-dots .owl-dot.active {
-  opacity: 1;
-}
-.owl-carousel .owl-dots .owl-dot + .owl-dot {
-  margin-left: 0.5rem;
-}
-
-/* Carousel - End */
 .flex-none {
   flex: unset;
 }
@@ -1038,7 +1123,7 @@ option[disabled]:first-of-type {
 .flex-card .icon {
   flex: 1 1 25%;
   width: 25%;
-  padding-left: 0.75rem;
+  /* padding-left: 0.75rem; */
   /* font-weight: bold; */
 }
 .flex-item .addon,
@@ -1107,7 +1192,7 @@ option[disabled]:first-of-type {
 }
 .card .card-body, .card.card-body {
   padding: 1.5rem;
-  z-index: 1;
+  /* z-index: 1; */
 }
 .card .card-body {
   padding: 0 1.5rem;
@@ -1136,7 +1221,7 @@ option[disabled]:first-of-type {
 }
 .item-list .item > .label,
 .card-list .item > .label {
-  color: var(--muted);
+  /* color: var(--muted); */
   width: 100%;
 }
 .item-list .item > .value,
@@ -1311,6 +1396,11 @@ option[disabled]:first-of-type {
   border-radius: 2.5rem;
 }
 
+.sticky {
+  position: sticky;
+  position: -webkit-sticky;
+}
+
 .section,
 section {
   position: relative;
@@ -1359,6 +1449,9 @@ section {
 
   .tabs {
     padding: 1.25rem 0.125rem;
+  }
+  .tabs.overlap {
+    padding: 0;
   }
 
   .tabular:not(.is-sticky) .row.tabular-header {
