--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -6,9 +6,9 @@
 */
 .sidebar-trigger {
   position: fixed !important;
-  height: 100vh;
+  height: 100vh !important;
   top: 0;
-  top: 0;
+  left: 0;
   border-radius: 0;
   z-index: -1;
 
@@ -75,6 +75,10 @@
   .sidebar-header {
     padding: 1rem;
 
+    .sidebar-logo {
+      display: none;
+    }
+
     .title {
       transition: height 0.5s linear 0.5s, opacity 0.5s linear 0.5s;
     }
@@ -112,6 +116,8 @@
 
       .label {
         color: var(--secondary);
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
     }
 
@@ -134,6 +140,13 @@
   display: flex;
   align-items: center;
   position: relative;
+  z-index: 2;
+
+  &.position-sticky,
+  &.sticky {
+    top: 0;
+    left: 0;
+  }
 
   .app-title {
     margin-bottom: 0;
@@ -181,6 +194,8 @@
         .sidebar {
           width: 0;
           flex-basis: 0;
+          opacity: 0;
+          padding: 0;
         }
       }
     }
@@ -250,10 +265,20 @@
           width: 15%;
           flex-basis: 15%;
 
-          .sidebar-header .title {
-            opacity: 0;
-            height: 0;
-            margin-bottom: 0;
+          .sidebar-header {
+            .app-logo {
+              display: none;
+            }
+
+            .sidebar-logo {
+              display: inline-block;
+            }
+
+            .title {
+              opacity: 0;
+              height: 0;
+              margin-bottom: 0;
+            }
           }
 
           .sidebar-nav .nav-item {
