--- a/css/app.css
+++ b/css/app.css
@@ -73,10 +73,9 @@ b {
   flex-wrap: wrap;
   align-items: flex-end;
   margin: 0.5rem 0;
+  gap: 0.5rem;
 }
 .flex-container > * {
-  margin-top: 0.5rem;
-  margin-left: 0.5rem;
   align-self: start;
 }
 .flex-container .btn {
@@ -180,7 +179,7 @@ hr {
   opacity: 0.5;
 }
 
-hr[class*=s-] {
+hr[class*=s-]:not(.default) {
   background-color: transparent !important;
   margin: 0;
   border: 0;
@@ -385,7 +384,7 @@ input[type=radio] {
   display: inline-block;
   justify-content: center;
   align-items: center;
-  width: 1rem;
+  width: 1rem !important;
   min-width: 1rem;
   height: 1rem;
   min-height: 1rem;
@@ -632,6 +631,7 @@ option[disabled]:first-of-type {
   align-items: center;
   width: 100%;
   padding: 0.125rem 1.25rem;
+  gap: 0.5rem;
   /* z-index: 1; */
 }
 .tabs > .tab {
@@ -646,9 +646,6 @@ option[disabled]:first-of-type {
   font-weight: bold;
   min-width: 5rem;
   flex: 0 0 auto;
-}
-.tabs > .tab + .tab {
-  margin-left: 0.5rem;
 }
 .tabs > .tab .img-content {
   width: 100%;
@@ -1217,7 +1214,7 @@ option[disabled]:first-of-type {
 .card-list .item {
   display: flex;
   align-items: center;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 .item-list .item > .label,
 .card-list .item > .label {
@@ -1231,6 +1228,7 @@ option[disabled]:first-of-type {
 }
 .item-list .item + .item,
 .card-list .item + .item {
+  margin-top: 1rem;
   border-top: 1px solid var(--border-color);
 }
 
@@ -1375,7 +1373,7 @@ option[disabled]:first-of-type {
 }
 
 .img-bg {
-  z-index: -1;
+  z-index: 0;
 }
 .img-bg, .img-bg:not(img)::before {
   content: attr(data-src);
@@ -1439,9 +1437,6 @@ section {
   .flex-container {
     /* flex-direction: column; */
     width: 100%;
-  }
-  .flex-container > * {
-    margin-top: 0.5rem;
   }
   .flex-container .btn {
     width: 100%;
