--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -112,7 +112,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 2;
+  z-index: 2 !important;
 }
 .app-header.position-sticky, .app-header.sticky {
   top: 0;
