--- a/css/sizes.css
+++ b/css/sizes.css
@@ -1736,62 +1736,62 @@ h6,
 }
 
 .sq-1 {
-  height: 1rem;
-  width: 1rem;
+  height: 1rem !important;
+  width: 1rem !important;
   min-height: 1rem;
   min-width: 1rem;
 }
 .sq-2 {
-  height: 2rem;
-  width: 2rem;
+  height: 2rem !important;
+  width: 2rem !important;
   min-height: 2rem;
   min-width: 2rem;
 }
 .sq-3 {
-  height: 3rem;
-  width: 3rem;
+  height: 3rem !important;
+  width: 3rem !important;
   min-height: 3rem;
   min-width: 3rem;
 }
 .sq-4 {
-  height: 4rem;
-  width: 4rem;
+  height: 4rem !important;
+  width: 4rem !important;
   min-height: 4rem;
   min-width: 4rem;
 }
 .sq-5 {
-  height: 5rem;
-  width: 5rem;
+  height: 5rem !important;
+  width: 5rem !important;
   min-height: 5rem;
   min-width: 5rem;
 }
 .sq-6 {
-  height: 6rem;
-  width: 6rem;
+  height: 6rem !important;
+  width: 6rem !important;
   min-height: 6rem;
   min-width: 6rem;
 }
 .sq-7 {
-  height: 7rem;
-  width: 7rem;
+  height: 7rem !important;
+  width: 7rem !important;
   min-height: 7rem;
   min-width: 7rem;
 }
 .sq-8 {
-  height: 8rem;
-  width: 8rem;
+  height: 8rem !important;
+  width: 8rem !important;
   min-height: 8rem;
   min-width: 8rem;
 }
 .sq-9 {
-  height: 9rem;
-  width: 9rem;
+  height: 9rem !important;
+  width: 9rem !important;
   min-height: 9rem;
   min-width: 9rem;
 }
 .sq-10 {
-  height: 10rem;
-  width: 10rem;
+  height: 10rem !important;
+  width: 10rem !important;
   min-height: 10rem;
   min-width: 10rem;
 }
