--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,6 +13,20 @@
   }
 }
 
+@mixin before-content {
+  &::before {
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    border-radius: inherit;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+}
+
 // @mixin check-child-state($child) {
 //   @at-root #{selector.unify($child, &)} {
 //     @content;
@@ -45,7 +59,8 @@ $font-size: 0.85rem;
 
 $app-colors-mapped: () !default;
 
-$app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
+$app-colors-mapped: map-merge(( // ===
+    'default': (bg: $default, c: $white),
     'primary': (bg: $primary, c: $white),
     'secondary': (bg: $secondary, c: $white),
     'white': (bg: $white, c: $default),
@@ -66,7 +81,9 @@ $app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
     'blue': (bg: $blue, c: $white),
     'yellow': (bg: $yellow, c: $white),
     'muted': (bg: $muted, c: $white),
-    'transparent': (bg: transparent, c: $default)), $app-colors-mapped);
+    // 'transparent': (bg: transparent, c: $default)
+    // ===
+  ), $app-colors-mapped);
 
 // /* Functions and Mixins */
 
@@ -77,7 +94,6 @@ $app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
     border-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a));
 
     &.is-blur {
-      backdrop-filter: blur(10px);
       background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), 0.5) !important;
 
       &:hover {
@@ -107,7 +123,6 @@ $app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
     border: none;
 
     &.is-blur {
-      backdrop-filter: blur(10px);
       background-color: transparentize(map-get($cm, "bg"), 0.5) !important;
 
       &:hover {
@@ -271,7 +286,6 @@ $app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
     border-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
 
     &.is-blur:not(:hover) {
-      backdrop-filter: blur(10px) !important;
       background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) + 45%), 0.5) !important;
     }
   }
@@ -289,10 +303,10 @@ $app-colors-mapped: map-merge(('default': (bg: $default, c: $white),
   #{$selector} {
     background-color: transparent !important;
     color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
-    border-color: currentColor !important;
+    border: thin solid;
+    // border-color: currentColor !important;
 
     &.is-blur {
-      backdrop-filter: blur(10px) !important;
       background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 45%), 0.5) !important;
     }
   }
