--- a/styles/app.scss
+++ b/styles/app.scss
@@ -75,10 +75,9 @@ b {
   flex-wrap: wrap;
   align-items: flex-end;
   margin: 0.5rem 0;
+  gap: 0.5rem;
 
   >* {
-    margin-top: 0.5rem;
-    margin-left: 0.5rem;
     align-self: start;
   }
 
@@ -209,7 +208,7 @@ hr {
   opacity: 0.5;
 }
 
-hr[class*=s-] {
+hr[class*=s-]:not(.default) {
   background-color: transparent !important;
   margin: 0;
   border: 0;
@@ -442,7 +441,7 @@ input {
     display: inline-block;
     justify-content: center;
     align-items: center;
-    width: 1rem;
+    width: 1rem !important;
     min-width: 1rem;
     height: 1rem;
     min-height: 1rem;
@@ -752,6 +751,7 @@ option[disabled]:first-of-type {
   align-items: center;
   width: 100%;
   padding: 0.125rem 1.25rem;
+  gap: 0.5rem;
   /* z-index: 1; */
 
   >.tab {
@@ -766,10 +766,6 @@ option[disabled]:first-of-type {
     font-weight: bold;
     min-width: 5rem;
     flex: 0 0 auto;
-
-    &+.tab {
-      margin-left: 0.5rem;
-    }
 
     .img-content {
       width: 100%;
@@ -1319,7 +1315,7 @@ option[disabled]:first-of-type {
   .item {
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding: 0 1rem;
 
     > {
       .label {
@@ -1334,6 +1330,7 @@ option[disabled]:first-of-type {
     }
 
     &+.item {
+      margin-top: 1rem;
       border-top: 1px solid var(--border-color);
     }
   }
@@ -1502,7 +1499,7 @@ option[disabled]:first-of-type {
 }
 
 .img-bg {
-  z-index: -1;
+  z-index: 0;
 
   &,
   &:not(img)::before {
@@ -1577,10 +1574,6 @@ section {
   .flex-container {
     /* flex-direction: column; */
     width: 100%;
-
-    >* {
-      margin-top: 0.5rem;
-    }
 
     .btn {
       width: 100%;
