--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -140,7 +140,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 2;
+  z-index: 2 !important;
 
   &.position-sticky,
   &.sticky {
