--- a/styles/sizes.scss
+++ b/styles/sizes.scss
@@ -103,8 +103,8 @@ h6,
 .sq- {
   @each $numb in (1, 2, 3, 4, 5, 6, 7, 8, 9, 10) {
     &#{$numb} {
-      height: #{$numb}rem;
-      width: #{$numb}rem;
+      height: #{$numb}rem !important;
+      width: #{$numb}rem !important;
       min-height: #{$numb}rem;
       min-width: #{$numb}rem;
     }
