Relocated Third-Party CSS Files
All external css libraries like. Bootstrap, Fontawesome, Owl-Carousel. etc, Have been relocated to external folder in the css folder.

1. Fixed ::before pseudo to children z-index.
2. Added more body text/background color fallback.
3. Inheriting border-radius on flex-card img.
4. Fixed transparent button bored issue.

--- a/css/app.css
+++ b/css/app.css
@@ -1115,6 +1115,7 @@ option[disabled]:first-of-type {
 .flex-card .img {
   flex: 1 1 40%;
   width: 40%;
+  border-radius: inherit;
 }
 .flex-item .icon,
 .flex-card .icon {
