--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,8 +3,8 @@
 * @Description: Unique and Very Responsive Admin Dashboard UI
 */
 @import 'variables';
-@import 'bootstrap.css';
-@import 'fontawesome.css';
+@import 'external/bootstrap.css';
+@import 'external/fontawesome.css';
 @import 'app.css';
 @import 'sidebar.css';
 @import 'animations.css';
@@ -17,8 +17,8 @@
 
 body {
   font-family: 'AppContent', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: var(--background-color);
-  color: var(--default);
+  background-color: var(--background-color, --default-c, --white);
+  color: var(--default, --white-c);
   font-size: var(--font-size);
   font-weight: 300;
 }
